fixed issue where background would overflow the grid

--- a/src/components/header/menu/Background/style.scss
+++ b/src/components/header/menu/Background/style.scss
@@ -7,8 +7,3 @@
   height: 100%;
   overflow: hidden;
 }
-
-.three_canvas {
-  width: 100%;
-  height: 400%;
-}
